Analyze different options to open URL